# regex-library

./: .gitignore  LICENSE  README.md  REGEX-101.md  patterns.py  pyproject.toml
tests/: test_patterns.py  test_realworld_hashes.py
tests/fixtures/: download.py
